# vectorcpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: MyVector.cpp  MyVector.h  main.cpp
